# 2024-02-10

- add: neovim/zsh configuration embeded in home-manager config
- add: garbage collection of old nixos generations
- add: gitlab ci for testing new nixos config builds
- add: use variables for username and hostname

# 2024-02-07

- add: setup flakes + home-manager, first home-manager config for git
- add: new terminal (kitty)

# 2024-02-06

- init: setup vanilla nixos config with GNOME
- add: install additional packages (nvim, firefox, python, cargo, tailscale, ...)
- add: nvidia drivers and cuda support
- add: zsh as default shell for all users