@@ -120,6 +120,9 @@
     package = config.boot.kernelPackages.nvidiaPackages.stable;
   };
 
+  # steam
+  programs.steam.enable = true;
+
   # nsb user
   users.users."${nsbUser}" = {
     isNormalUser = true;
