@@ -1,3 +1,7 @@
+# 2024-02-18
+
+- Add steam and switch kitty for wezterm
+
 # 2024-02-10
 
 - add: neovim/zsh configuration embeded in home-manager config
